# more-features-less-rows

./: .gitignore  README.md  pyproject.toml
code/: bagging.py  extratrees.py  feature_selection.py  logit.py  nusvc.py  randomforest.py  svc.py
code/.ipynb_checkpoints/: preprocessing-checkpoint.ipynb
src/more_features_less_rows/: bagging.py  extratrees.py  feature_selection.py  generate_graphs.py  logit.py  nusvc.py  svc.py
